--- a/정해연/index.html
+++ b/정해연/index.html
@@ -35,13 +35,45 @@
         </div>
         <div class="desc">
             <p class="split t5">
-                어떤 일이라도 노력하고 즐기면 그 결과는 빛을 바란다고 생각합니다.
-                신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 겸손함을 유지하며
+                어떤 일이라도 노력하고 즐기면 그 결과는 빛을 바란다고 생각합니다.<br>
+                신입의 열정과 도전정신을 깊숙히 새기며 배움에 있어 겸손함을 유지하며<br>
                 세부적인 곳까지 파고드는 개발자가 되겠습니다.
             </p>
         </div>
     </div>
-    <div id="section3"></div>
+    <!-- //section2 -->
+
+    <div id="section3">
+        <div class="text">
+            <div>work portfolio work portfolio</div>
+            <ul class="list">
+                <li>1. youtube site</li>
+                <li>2. react blog site</li>
+                <li>3. vue blog site</li>
+                <li>4. movie blog site</li>
+            </ul>
+        </div>
+        <div class="site-wrap">
+            <div class="site s1">
+                <div class="imgWrap">
+                    <div class="img"></div>
+                </div>
+                <h3 class="title">GuitarYouTube</h3>
+                <p class="desc">
+                    리액트를 이용하여 작업한사이트입니다.<br>
+                    node.js를 기반으로
+                    서버 셋팅 후 firebace에 배포하여 작업하였습니다.
+                    <span class="btn">
+                        <a href="#">github</a>
+                        <a href="#">view</a>
+                    </span>
+                </p>
+
+            </div>
+        </div>
+    </div>
+    <!-- //section3 -->
+
     <div id="section4"></div>
     <div id="section5"></div>
 
