--- a/임종한/index.html
+++ b/임종한/index.html
@@ -45,15 +45,57 @@
     </div>
     <!-- //section1 -->
 
-    <div id="section2"></div><!-- //section1 -->
+    <div id="section2">
+        <div class="imgWrap">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="text-title">
+            <span class="svg">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <polygon
+                        points="11.293 4.707 17.586 11 4 11 4 13 17.586 13 11.293 19.293 12.707 20.707 21.414 12 12.707 3.293 11.293 4.707" />
+                </svg>
+            </span>
+            <p class="desc1">WHY, COLLABORATION AMONG DEVELOPERS</p>
+            <p class="desc2">
+                <i>최종 제품의 품질을 높이기 위해서는 협업은 필수적이라 생각합니다.</i>
+
+                협업없이 혼자 프로젝트를 추진하는 것은 혼자만의 시야와 지식으로 한정된 결과물을 가져온다고 생각합니다.<br>
+                협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과
+                다양한
+                기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다. <br>
+                작은 관점에서의 협업은 단순히 함께 일하는 것이겠지만, 시각을 넓혀 보면 협업이란 서로를 이해하고 지지하며 공동의 목표를 향해
+                나아가는 과정인 것 같습니다.
+            </p>
+        </div>
+    </div>
+    <!-- //section2 -->
+
     <div id="section3"></div><!-- //section1 -->
     <div id="section4"></div><!-- //section1 -->
     <div id="section5"></div><!-- //section1 -->
     <div id="section6"></div><!-- //section1 -->
 
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
+    <script>
+        const lenis = new Lenis()
+
+        lenis.on('scroll', (e) => {
+            console.log(e)
+        })
+
+        function raf(time) {
+            lenis.raf(time)
+            requestAnimationFrame(raf)
+        }
+
+        requestAnimationFrame(raf)
+    </script>
     <script>
         const targets = gsap.utils.toArray(".split");
 
