--- a/김희진2/index.html
+++ b/김희진2/index.html
@@ -11,6 +11,23 @@
 </head>
 
 <body>
+    <header id="header">
+        <div class="left">
+            <h1>11code</h1>
+            <ul>
+                <li><a href="#">about</a></li>
+                <li><a href="#">project</a></li>
+                <li><a href="#">site</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </div>
+        <div class="right">
+            <div>time : 383478288</div>
+            <div>weather : rain
+            </div>
+    </header>
+    <!-- //header -->
+
     <div id="section1">
         <div class="desc split">
             We are a design agency based in Copenhagen. With a strong belief in strategically founded and highly crafted
@@ -28,7 +45,32 @@
     </div>
     <!-- //section1 -->
 
-    <div id="section2"></div>
+    <div id="section2">
+        <div class="about1">
+            <h4>{ 삶의 모토 }</h4>
+            <p>
+                프론트 앤드 개발자를 꿈꾸는 김희진입니다.<br>
+                "한번의 경험이 없으면 한번의 지혜가 자라지 않는다."<br>이 문장은 제 삶의 모토입니다. 한번의 경험이 없으면
+                단 하나의 지혜도 얻을수 없다는 말입니다.<br>
+                저는 늘 이 문장을 가슴속 깊이 새기며 무엇인가를 헤쳐 나가야할때 두려움이 생기면 한번 더 생각합니다.<br>
+                저는 이러한 저의 모토를 토대로 목표가 있다면 무언가를 알아내고 습득하는것을 두려워 하지 않고 <br>
+                지혜를 얻는 다는 마음가짐으로 늘 겸손한 자세로 배우고 제것으로 만들고자 노력했습니다. <br>
+                다시한번 프론트앤드라는 꿈을 꾸며 배움을 익힐때도 저의 이러한 삶의 모토로 늘 어려움을 극복해 나갈것입니다.<br>
+                신입으로써 항상 늘 내것이 된다라는 마음가짐으로 감사하게 삶과 일을 대하고 싶습니다!
+            </p>
+        </div>
+        <div class="about2">
+            <h4>{ 새로운 꿈을 꾸는 계기 }</h4>
+            <p>
+                늘 진취적인 마음가짐으로 얻은 다양한 경험들이 모여 새로운 꿈인 프론트엔드 개발자를 향한 열망이
+                되었습니다.<br>학창시절의 전공과 여성의류 온라인 사업에서의 UI/UX 경험을 통해 웹 개발에 흥미를 느꼈고,<br>
+                끊임없는 학습을 추구하는 저의 가치관과 프론트엔드 개발의 가치가 조화를 이루어 꿈을 키우게 되었습니다.<br>
+                프론트엔드 개발은 어렵고 도전적인 과정이지만, 그 일의 가치와 재미에 큰 만족을 느낍니다. <br>새로운 꿈을
+                찾아나가는 여정을 어렵게 찾은 만큼 더욱 열정적으로 힘차게 나아가고 싶습니다.
+
+            </p>
+        </div>
+    </div>
     <div id="section3"></div>
     <div id="section4"></div>
     <div id="section5"></div>
@@ -89,7 +131,7 @@
                 trigger: "#section1",
                 start: "top bottom",
                 ene: "bottom top",
-                markers: true,
+                markers: false,
                 scrub: true
             }
         });
