--- a/임종한/index.html
+++ b/임종한/index.html
@@ -73,7 +73,32 @@
     </div>
     <!-- //section2 -->
 
-    <div id="section3"></div><!-- //section1 -->
+    <div id="section3">
+        <div class="title">
+            <span class="img"></span>
+            <div class="split t1">working,</div>
+            <div class="split t2">mylist</div>
+            <p class="desc">프론트앤드 포트폴리오를 위한 작업 목록입니다.</p>
+            <p class="desc2">
+                협업없이 혼자 프로젝트를 추진하는 것은 혼자만의 시야와 지식으로 한정된 결과물을 가져온다고 생각합니다.<br>
+                협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.
+            </p>
+        </div>
+
+        <div class="site__wrap">
+            <div class="site s1">
+                <span class="num">1.</span>
+                <div class="subTitle">(유튜브 사이트 제작)</div>
+                <div class="tit">
+                    <div class="h4">We build motion systems that scale your identity.</div>
+                    <div class="img"></div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- //section3 -->
+
     <div id="section4"></div><!-- //section1 -->
     <div id="section5"></div><!-- //section1 -->
     <div id="section6"></div><!-- //section1 -->
