--- a/권초록/index.html
+++ b/권초록/index.html
@@ -8,6 +8,29 @@
 
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <style>
+        .layerImg {
+            position: absolute;
+            left: 50%;
+            top: 120%;
+            width: 350px;
+            height: 500px;
+            transform: translate(-50%, -50%) rotate(10deg);
+            background-color: #ccc;
+            overflow: hidden;
+            opacity: 0.5;
+        }
+
+        .layerImg .img {
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
@@ -24,25 +47,31 @@
         <div class="bom">
             <div>
                 <ul class="split">
-                    <li><a href="#">youtube site/</a></li>
-                    <li><a href="#">react movie site/</a></li>
-                    <li><a href="#">next blog site/</a></li>
+                    <li class="dddd"><a href="#" data-img-src="assets/img/1.jpg">youtube site/</a></li>
+                    <li><a href="#" data-img-src="assets/img/2.jpg">react movie site/</a></li>
+                    <li><a href="#" data-img-src="assets/img/3.jpg">next blog site/</a></li>
                 </ul>
             </div>
             <div>
                 <ul class="split">
-                    <li><a href="#">javascript/</a></li>
-                    <li><a href="#">scss/</a></li>
-                    <li><a href="#">game/</a></li>
+                    <li><a href="#" data-img="4.jpg">javascript/</a></li>
+                    <li><a href="#" data-img="5.jpg">scss/</a></li>
+                    <li><a href="#" data-img="6.jpg">game/</a></li>
                 </ul>
             </div>
             <div>
                 <ul class="split">
-                    <li><a href="#">php blog/</a></li>
-                    <li><a href="#">react blog/</a></li>
-                    <li><a href="#">next blog/</a></li>
+                    <li><a href="#" data-img="7.jpg">php blog/</a></li>
+                    <li><a href="#" data-img="8.jpg">react blog/</a></li>
+                    <li><a href="#" data-img="9.jpg">next blog/</a></li>
                 </ul>
             </div>
+        </div>
+    </div>
+
+    <div class="layerImg">
+        <div class="img">
+            <img src="assets/img/1.jpg" alt="">
         </div>
     </div>
 
@@ -50,24 +79,31 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
     <script>
-        const targets = gsap.utils.toArray(".split");
+        document.addEventListener("DOMContentLoaded", function () {
+            // const layerImgDiv = document.querySelector('.layerImg .img');
+            // const layerImg = layerImgDiv.querySelector('img');
 
-        targets.forEach(target => {
-            let SplitClient = new SplitType(target, { type: "lines, words, chars" });
-            let lines = SplitClient.lines;
-            let words = SplitClient.words;
-            let chars = SplitClient.chars;
-        })
-        gsap.set("#section .top .title .char", { y: 400 })
-        gsap.set("#section .top .desc .char", { opacity: 0, y: 10 })
-        gsap.set("#section .bom .char", { opacity: 0 })
+            // document.querySelectorAll('.bom li').forEach(item => {
+            //     item.addEventListener('mouseover', function () {
+            //         const imgSrc = this.getAttribute('data-img-src');
+            //         layerImg.src = imgSrc;
+            //         gsap.to(layerImgDiv, { top: '50%', duration: 0.5 });
+            //     });
 
-        setTimeout(() => {
-            let tl = gsap.timeline();
-            tl.to("#section .top .title .char", { stagger: 0.03, y: 0, duration: .5, ease: "slow(0.7,0.7,false)" })
-            tl.to("#section .top .desc .char", { stagger: 0.01, y: 0, opacity: 1, duration: 1, ease: "slow(0.7,0.7,false)" })
-            tl.to("#section .bom .char", { opacity: 1 })
-        }, 2000);
+            //     item.addEventListener('mouseout', function () {
+            //         gsap.to(layerImgDiv, { y: '0%', duration: 0.5 });
+            //     });
+            // });
+
+            document.querySelector(".dddd").addEventListener("mouseover", () => {
+                gsap.to(".layerImg", { opacity: 1, rotation: 0, top: "50%", width: 400, height: 550, duration: 2, ease: "expo.out" })
+                gsap.to(".layerImg .img", { width: "120%", height: "120%", duration: 1 })
+
+            });
+            document.querySelector(".dddd").addEventListener("mouseout", () => {
+                gsap.to(".layerImg", { top: "-20%", duration: 1 })
+            });
+        });
     </script>
 </body>
 
