--- a/윤영식/index.html
+++ b/윤영식/index.html
@@ -22,7 +22,7 @@
             <span class="bl">01</span>
             <span class="br">scroll</span>
         </div>
-        <div class="bg-small"></div>
+        <div class="bg-small" data-src="sub.html"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
@@ -38,12 +38,20 @@
             let chars = SplitClient.chars;
         })
 
-        setTimeout(() => {
+        document.querySelector(".bg-small").addEventListener("click", () => {
+
             gsap.to("#intro .text .char", { opacity: 0, y: 150, stagger: 0.051, duration: 1.4, ease: "expo.inOut" })
             gsap.to(".bg-small", { opacity: 0, duration: 2, ease: "expo.out" })
             gsap.to(".bg-white", { opacity: 0, width: "0%", duration: 1.3, ease: "power4.inOut" })
             gsap.to(".bg-main .bg", { marginLeft: "-12%", duration: 3, ease: "expo.out", scale: 1, delay: 0.4 })
-        }, 2000)
+
+            setTimeout(() => {
+                window.location.href = document.querySelector(".bg-small").getAttribute("data-src");
+            }, 2000);
+
+        })
+
+
     </script>
 
 </body>
