--- a/윤영식/sub.html
+++ b/윤영식/sub.html
@@ -14,22 +14,15 @@
     <div id="intro">
         <div class="text split">portfolio</div>
         <div class="bg-main">
-
+            <div class="bg"></div>
         </div>
-        <div class="bg-white">
-            <h1 class="tl"><a href="index.html">D</a></h1>
-            <span class="tr"><a href="sub.html">N</a></span>
-            <span class="bl">01</span>
-            <span class="br">scroll</span>
-        </div>
-        <div class="bg-small"></div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
     <script>
-
+        gsap.set(".bg-main .bg", { marginLeft: "-12%", duration: 3, ease: "expo.out", scale: 1, delay: 0.4 })
     </script>
 
 </body>
