--- a/김희진2/index.html
+++ b/김희진2/index.html
@@ -59,19 +59,52 @@
                 신입으로써 항상 늘 내것이 된다라는 마음가짐으로 감사하게 삶과 일을 대하고 싶습니다!
             </p>
         </div>
-        <div class="about2">
-            <h4>{ 새로운 꿈을 꾸는 계기 }</h4>
-            <p>
-                늘 진취적인 마음가짐으로 얻은 다양한 경험들이 모여 새로운 꿈인 프론트엔드 개발자를 향한 열망이
-                되었습니다.<br>학창시절의 전공과 여성의류 온라인 사업에서의 UI/UX 경험을 통해 웹 개발에 흥미를 느꼈고,<br>
-                끊임없는 학습을 추구하는 저의 가치관과 프론트엔드 개발의 가치가 조화를 이루어 꿈을 키우게 되었습니다.<br>
-                프론트엔드 개발은 어렵고 도전적인 과정이지만, 그 일의 가치와 재미에 큰 만족을 느낍니다. <br>새로운 꿈을
-                찾아나가는 여정을 어렵게 찾은 만큼 더욱 열정적으로 힘차게 나아가고 싶습니다.
+    </div>
 
-            </p>
+    <div id="section3">
+        <h4>{ 포트폴리오 }</h4>
+        <div class="port-wrap">
+            <div class="port p1">
+                <img src="./assets/img/Frame01.jpg" alt="">
+                <div class="mp3"></div>
+                <div class="info">
+                    <h5>{ youtube api }</h5>
+                    <p>
+                        PETPAR는 유기동물 플랫폼 웹사이트입니다.<br>
+                        유기동물들을 입양하고 정보를 공유하는
+                        플랫폼입니다.
+                    </p>
+                </div>
+            </div>
+
+            <div class="port p2">
+                <img src="./assets/img/Frame02.jpg" alt="">
+                <div class="mp3">
+                    <img src="https://springsummer.imgix.net/uploads/Magasin-01.png?auto=compress%2Cformat&fit=clip&q=35&w=2600"
+                        alt="">
+                </div>
+                <div class="info">
+                    <h5>{ youtube api }</h5>
+                    <p>
+                        PETPAR는 유기동물 플랫폼 웹사이트입니다.<br>
+                        유기동물들을 입양하고 정보를 공유하는
+                        플랫폼입니다.
+                    </p>
+                </div>
+                <div class="skill">
+                    <span>php</span>
+                    <span>scss</span>
+                    <span>java</span>
+                </div>
+            </div>
+            <div class="port p3"></div>
+            <div class="port p4"></div>
+            <div class="port p5"></div>
+            <div class="port p6"></div>
         </div>
     </div>
-    <div id="section3"></div>
+    <!-- //section3 -->
+
     <div id="section4"></div>
     <div id="section5"></div>
     <div id="section6"></div>
