--- a/강서현/index.html
+++ b/강서현/index.html
@@ -57,8 +57,44 @@
     </div>
     <!-- //serction2 -->
 
-    <div id="section3"></div>
-    <div id="section4"></div>
+    <div id="section3">
+        <div class="intro-wrap">
+            <div class="intro i1">
+                <h3>intro1</h3>
+                <h3>intro2</h3>
+            </div>
+            <div class="intro i2">intro2</div>
+            <div class="intro i3">intro3</div>
+        </div>
+    </div>
+    <!-- //section3 -->
+
+    <div id="section4">
+        <div class="port-wrap">
+            <div class="port p1">
+                <h3>YOUTUBE API</h3>
+                <p>
+                    유튜브 API를 사용하여 유명 락밴드의 노래들을 들을 수 있는 사이트를 만들었습니다.<br>
+                    오늘의 추천픽 페이지에서 10가지의 노래들을 추천받을 수 있으며,<br>
+                    검색과 동영상 재생은 물론,
+                    해당 유튜브 채널의 정보와 최신 영상 목록 또한 볼 수 있습니다.
+                </p>
+                <div class="img">
+                    <img src="https://images.unsplash.com/photo-1567443024551-f3e3cc2be870?q=80&w=3540&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        alt="">
+                </div>
+                <div class="btn">
+                    <a href="#">code view</a>
+                    <a href="#">site view</a>
+                </div>
+            </div>
+            <div class="port p2"></div>
+            <div class="port p3"></div>
+            <div class="port p4"></div>
+            <div class="port p5"></div>
+        </div>
+    </div>
+    <!-- //section4 -->
     <div id="section5"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
@@ -91,6 +127,39 @@
             tl.to(".leftTop", { opacity: 1, top: 10 }, "b")
             tl.to(".rightTop", { opacity: 1, top: 10 }, "b")
         }, 2000)
+
+
+        const ani4 = gsap.timeline();
+        ani4.to(".intro-wrap .intro.i1 h3", { scale: 0.4 });
+
+        ScrollTrigger.create({
+            animation: ani4,
+            trigger: "#section3",
+            start: "top top",
+            end: "+=3000",
+            scrub: true,
+            pin: true,
+            anticipatePin: 1,
+            markers: true
+        });
+
+        const ani5 = gsap.timeline();
+        ani5.to(".port-wrap .port.p1 .img", { width: "40%" });
+
+        ScrollTrigger.create({
+            animation: ani5,
+            trigger: "#section4",
+            start: "top top",
+            end: "+=3000",
+            scrub: true,
+            pin: true,
+            anticipatePin: 1,
+            markers: true
+        });
+
+
+
+
 
 
         // 
