--- a/윤영식/sub.html
+++ b/윤영식/sub.html
@@ -11,12 +11,45 @@
 </head>
 
 <body>
-    <div id="intro">
-        <div class="text split">portfolio</div>
-        <div class="bg-main">
-            <div class="bg"></div>
-        </div>
-    </div>
+    <main id="contents">
+        <section id="section1">
+            <div class="subText">
+                <h3>Trend Device</h3>
+                <p>
+                    직관적이고 사용하기 편리한 인터페이스를 제공하여<br>
+                    사용자가 원하는 휴대폰 모델을 선택하고, 선택한 모델들을 한눈에 비교할 수 있도록 합니다.
+                </p>
+            </div>
+        </section>
+        <section id="section2"></section>
+
+        <section id="section3">
+            <span class="num">#1</span>
+            <div class="desc-wrap">
+                <div class="desc d1">
+                    <h5>description</h5>
+                    <p>
+                        json 파일에서 정보를 가져오는 리액트 사이트입니다.<br>
+                        카페 음료 추천을 주제로 랜덤 선택, 기분에 따른 추천 및 검색 기능을 구현하였고,<br>
+                        앞서 제작한 유튜브 사이트를 참고하였습니다. 저는 전체적인<br>
+                        디자인 작업을 맡았으며 json 데이터 파일 및<br>
+                        검색 페이지를 제작하였습니다.<br>
+                    </p>
+                </div>
+
+                <div class="desc d2">
+
+                </div>
+
+
+                <div class="desc d3">desc3</div>
+                <div class="desc d4">desc4</div>
+                <div class="desc d5">desc5</div>
+                <div class="desc d6">desc6</div>
+            </div>
+        </section>
+    </main>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
