--- a/정새영/index.html
+++ b/정새영/index.html
@@ -11,26 +11,18 @@
 </head>
 
 <body>
-    <header id="header">
-        <h1 id="headerBg">portfooio</h1>
-        <nav>about</nav>
-    </header>
-    <!-- //header -->
-
     <div id="section1">
         <div class="center__text">
-            <div class="split t1">TO LIVE A CREATIVE</div>
+            <div class="split t1">TO CREATIVE</div>
             <div class="split t2">LIFE WE MUST</div>
             <div class="split t3">LOSE OUR FEAR</div>
             <div class="split t4">OF BEING WRONG</div>
-            <div class="img i1"></div>
+            <div class="img i1"><span>youtube API</span></div>
             <div class="img i2"></div>
             <div class="img i3"></div>
+            <div class="img i4"></div>
         </div>
     </div>
-    <div id="section2"></div>
-    <div id="section3"></div>
-    <div id="section4"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
@@ -47,57 +39,6 @@
             let words = SplitClient.words;
             let chars = SplitClient.chars;
         })
-
-        gsap.set("#header", { top: -100 })
-        gsap.set(".center__text .t1 .char", { opacity: 0, scale: 1.3 })
-        gsap.set(".center__text .t2 .char", { opacity: 0, scale: 1.3 })
-        gsap.set(".center__text .t3 .char", { opacity: 0, scale: 1.3 })
-        gsap.set(".center__text .t4 .char", { opacity: 0, scale: 1.3 })
-
-        gsap.set(".center__text .i1", { opacity: 0 })
-        gsap.set(".center__text .i2", { opacity: 0 })
-        gsap.set(".center__text .i3", { opacity: 0 })
-
-        setTimeout(() => {
-            let tl = gsap.timeline()
-            tl.to(".center__text .t1 .char", { opacity: 1, duration: 2, scale: 1, stagger: { amount: 1, from: "random" }, ease: "power3.out" }, "a")
-            tl.to(".center__text .t2 .char", { opacity: 1, duration: 2, scale: 1, stagger: { amount: 1, from: "random" }, ease: "power3.out" }, "a")
-            tl.to(".center__text .t3 .char", { opacity: 1, duration: 2, scale: 1, stagger: { amount: 1, from: "random" }, ease: "power3.out" }, "a")
-            tl.to(".center__text .t4 .char", { opacity: 1, duration: 2, scale: 1, stagger: { amount: 1, from: "random" }, ease: "power3.out" }, "a")
-            tl.to(".center__text .i1", { opacity: 1 })
-            tl.to(".center__text .i2", { opacity: 1 })
-            tl.to(".center__text .i3", { opacity: 1 })
-            tl.to("#header", { top: 0 })
-        }, 2000);
-
-        gsap.utils.toArray('.center__text .t1 .char').forEach(splitText => {
-            ScrollTrigger.create({
-                trigger: '#section2', // 두 번째 섹션을 트리거로 설정
-                start: 'top bottom', // 두 번째 섹션이 뷰포트의 하단에 도달할 때 시작
-                onEnter: () => animateTextOut(splitText), // 섹션이 진입할 때 텍스트 사라짐
-                onLeaveBack: () => animateTextIn(splitText) // 섹션이 떠날 때 텍스트 다시 나타남
-            });
-        });
-
-        function animateTextOut(element) {
-            gsap.to(element, {
-                opacity: 0,
-                duration: 1,
-                stagger: { amount: 1, from: "random" },
-                ease: 'power1.out',
-                onComplete: () => element.style.visibility = 'hidden'
-            });
-        }
-
-        function animateTextIn(element) {
-            element.style.visibility = 'visible';
-            gsap.to(element, {
-                opacity: 1,
-                duration: 1,
-                stagger: { amount: 1, from: "random" },
-                ease: 'power1.in'
-            });
-        }
     </script>
 </body>
 
