--- a/서유진/index.html
+++ b/서유진/index.html
@@ -22,15 +22,15 @@
             <nav class="nav">
                 <ul>
                     <li><a href="/">1. Home</a></li>
-                    <li><a href="html/portfoliolist.html">2. PortFolio</a>
+                    <li><a href="sub-list.html">2. PortFolio</a>
                         <ul>
-                            <li><a href="html/portfoliolist.html">a. Find English</a></li>
-                            <li><a href="html/portfoliolist.html">b. CinematicTable</a></li>
-                            <li><a href="html/portfoliolist.html">c. Trend Device</a></li>
-                            <li><a href="html/portfoliolist.html">d. Recommend Book</a></li>
-                            <li><a href="html/portfoliolist.html">e. Diary with Chat GPT</a></li>
-                            <li><a href="html/portfoliolist.html">f. Rolling Paper with Friends</a></li>
-                            <li><a href="html/portfoliolist.html">g. Shaking carrots</a></li>
+                            <li><a href="sub1.html">a. Find English</a></li>
+                            <li><a href="sub1.html">b. CinematicTable</a></li>
+                            <li><a href="sub1.html">c. Trend Device</a></li>
+                            <li><a href="sub1.html">d. Recommend Book</a></li>
+                            <li><a href="sub1.html">e. Diary with Chat GPT</a></li>
+                            <li><a href="sub1.html">f. Rolling Paper with Friends</a></li>
+                            <li><a href="sub1.html">g. Shaking carrots</a></li>
                         </ul>
                     </li>
                     <li><a href="html/aboutme.html">3. About Me</a>
@@ -73,6 +73,9 @@
             </div>
             <div class="cont-footer"></div>
         </div>
+        <div class="right">
+
+        </div>
     </div>
     <!-- //section -->
 
@@ -82,7 +85,6 @@
             gl_Position = vec4( position, 1.0 );
         }
     </script>
-
     <script id="fragmentShader" type="x-shader/x-fragment">
         #ifdef GL_ES
             precision mediump float;
@@ -190,8 +192,6 @@
             renderer.render(scene, camera);
         }
     </script>
-
-
 </body>
 
 </html>
